--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"licence": "This Source Code Form is subject to the terms of the Mozilla Public License, v2.0. If a copy of the MPL was not distributed with this file, you can obtain one at https://mozilla.org/MPL/2.0/",
-	"copyright": "© 2022 Roy Orbison",
+	"copyright": "© 2022 Roy Orbitson",
 	"manifest_version": 2,
 	"default_locale": "en",
 	"name": "__MSG_extensionName__",
-	"author": "Roy Orbison",
+	"author": "Roy Orbitson",
 	"version": "0.3.0",
 	"description": "__MSG_extensionDescription__",
 	"icons": {
